--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,14 +1,19 @@
+aiosqlite==0.16.0
+atlastk==0.12.1
 autopep8==1.5.4
 click==7.1.2
 fastapi==0.61.2
 flake8==3.8.4
 h11==0.11.0
+iso8601==0.1.13
 mccabe==0.6.1
 pycodestyle==2.6.0
 pydantic==1.7.2
 pyflakes==2.2.0
+PyPika==0.44.0
+pytz==2020.4
 starlette==0.13.6
 toml==0.10.2
+tortoise-orm==0.16.18
+typing-extensions==3.7.4.3
 uvicorn==0.12.2
-asyncpg==0.20.1
-tortoise-orm==0.16.12
