forwarded port bug solved

--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,17 +1,26 @@
 aiosqlite==0.16.0
+asyncpg==0.21.0
 atlastk==0.12.1
+attrs==20.3.0
 autopep8==1.5.4
 click==7.1.2
 fastapi==0.61.2
 flake8==3.8.4
 h11==0.11.0
+iniconfig==1.1.1
 iso8601==0.1.13
 mccabe==0.6.1
+packaging==20.4
+pluggy==0.13.1
+py==1.9.0
 pycodestyle==2.6.0
 pydantic==1.7.2
 pyflakes==2.2.0
+pyparsing==2.4.7
 PyPika==0.44.0
+pytest==6.1.2
 pytz==2020.4
+six==1.15.0
 starlette==0.13.6
 toml==0.10.2
 tortoise-orm==0.16.18
