--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -6,6 +6,7 @@ autopep8==1.5.4
 click==7.1.2
 fastapi==0.61.2
 flake8==3.8.4
+gunicorn==20.0.4
 h11==0.11.0
 iniconfig==1.1.1
 iso8601==0.1.13
@@ -26,4 +27,3 @@ toml==0.10.2
 tortoise-orm==0.16.18
 typing-extensions==3.7.4.3
 uvicorn==0.12.2
-requests==2.23.0
